--- a/src/backend-templates/email/booking_invoice_resend.ejs
+++ b/src/backend-templates/email/booking_invoice_resend.ejs
@@ -559,7 +559,7 @@
                                                                                         <td class="t34">
                                                                                             <h1 class="t32"
                                                                                                 style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:28px;font-weight:600;font-style:normal;font-size:18px;text-decoration:none;text-transform:none;letter-spacing:-1.2px;direction:ltr;color:#222222;text-align:center;mso-line-height-rule:exactly;mso-text-raise:3px;">
-                                                                                                Invoice Copy – [Scan Name]
+                                                                                                Invoice for Your Radiology Scan – [Scan Name]
                                                                                             </h1>
                                                                                         </td>
                                                                                     </tr>
@@ -624,7 +624,7 @@
                                                                                         <td class="t46">
                                                                                             <p class="t44"
                                                                                                 style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:23px;font-weight:400;font-style:normal;font-size:12px;text-decoration:none;text-transform:none;letter-spacing:-0.6px;direction:ltr;color:#444444;text-align:left;mso-line-height-rule:exactly;mso-text-raise:3px;">
-                                                                                                As requested, please find attached the invoice for your scan booking.</p>
+                                                                                                As requested, please find attached the invoice for your radiology scan appointment.</p>
                                                                                         </td>
                                                                                     </tr>
                                                                                 </table>
@@ -655,36 +655,7 @@
                                                                                         <td class="t52">
                                                                                             <p class="t50"
                                                                                                 style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:23px;font-weight:600;font-style:normal;font-size:12px;text-decoration:none;text-transform:none;letter-spacing:-0.6px;direction:ltr;color:#444444;text-align:left;mso-line-height-rule:exactly;mso-text-raise:3px;">
-                                                                                                Invoice Details</p>
-                                                                                        </td>
-                                                                                    </tr>
-                                                                                </table>
-                                                                            </td>
-                                                                        </tr>
-                                                                    </table>
-                                                                </td>
-                                                            </tr>
-                                                            <tr>
-                                                                <td align="center">
-                                                                    <table class="t61" role="presentation"
-                                                                        cellpadding="0" cellspacing="0"
-                                                                        style="Margin-left:auto;Margin-right:auto;">
-                                                                        <tr>
-                                                                            <td width="467" class="t60"
-                                                                                style="width:467px;">
-                                                                                <table class="t59" role="presentation"
-                                                                                    cellpadding="0" cellspacing="0"
-                                                                                    width="100%" style="width:100%;">
-                                                                                    <tr>
-                                                                                        <td class="t58">
-                                                                                            <p class="t57"
-                                                                                                style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:23px;font-weight:400;font-style:normal;font-size:12px;text-decoration:none;text-transform:none;letter-spacing:-0.6px;direction:ltr;color:#444444;text-align:left;mso-line-height-rule:exactly;mso-text-raise:3px;">
-                                                                                                <span class="t56"
-                                                                                                    style="margin:0;Margin:0;font-weight:500;mso-line-height-rule:exactly;">Invoice No:
-                                                                                                </span>
-                                                                                                [Invoice Number]
-                                                                                                    &nbsp;
-                                                                                            </p>
+                                                                                                Appointment Details</p>
                                                                                         </td>
                                                                                     </tr>
                                                                                 </table>
@@ -752,23 +723,23 @@
                                                             </tr>
                                                             <tr>
                                                                 <td align="center">
-                                                                    <table class="t73" role="presentation"
+                                                                    <table class="t67" role="presentation"
                                                                         cellpadding="0" cellspacing="0"
                                                                         style="Margin-left:auto;Margin-right:auto;">
                                                                         <tr>
-                                                                            <td width="467" class="t72"
+                                                                            <td width="467" class="t66"
                                                                                 style="width:467px;">
-                                                                                <table class="t71" role="presentation"
+                                                                                <table class="t65" role="presentation"
                                                                                     cellpadding="0" cellspacing="0"
                                                                                     width="100%" style="width:100%;">
                                                                                     <tr>
-                                                                                        <td class="t70">
-                                                                                            <p class="t69"
+                                                                                        <td class="t64">
+                                                                                            <p class="t63"
                                                                                                 style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:23px;font-weight:400;font-style:normal;font-size:12px;text-decoration:none;text-transform:none;letter-spacing:-0.6px;direction:ltr;color:#444444;text-align:left;mso-line-height-rule:exactly;mso-text-raise:3px;">
-                                                                                                <span class="t68"
-                                                                                                    style="margin:0;Margin:0;font-weight:500;mso-line-height-rule:exactly;">Amount Paid:
-                                                                                                </span>
-                                                                                                [Amount Paid]
+                                                                                                <span class="t62"
+                                                                                                    style="margin:0;Margin:0;font-weight:500;mso-line-height-rule:exactly;">Location: </span>
+                                                                                                    [Center Name], [Address]
+                                                                                                    &nbsp;
                                                                                             </p>
                                                                                         </td>
                                                                                     </tr>
@@ -800,7 +771,7 @@
                                                                                         <td class="t87">
                                                                                             <p class="t86"
                                                                                                 style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:23px;font-weight:400;font-style:normal;font-size:12px;text-decoration:none;text-transform:none;letter-spacing:-0.6px;direction:ltr;color:#444444;text-align:left;mso-line-height-rule:exactly;mso-text-raise:3px;">
-                                                                                                For any queries, kindly contact our support team.
+                                                                                                If you have any questions about your appointment or require further assistance, please feel free to contact us at [Contact Number].
                                                                                             </p>
                                                                                         </td>
                                                                                     </tr>
