--- a/src/backend-templates/email/payment_link_resend.ejs
+++ b/src/backend-templates/email/payment_link_resend.ejs
@@ -559,7 +559,7 @@
                                                                                         <td class="t34">
                                                                                             <h1 class="t32"
                                                                                                 style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:28px;font-weight:600;font-style:normal;font-size:18px;text-decoration:none;text-transform:none;letter-spacing:-1.2px;direction:ltr;color:#222222;text-align:center;mso-line-height-rule:exactly;mso-text-raise:3px;">
-                                                                                                Payment Pending – [Scan Name]
+                                                                                                Payment Request for Your Scan – [Scan Name]!
                                                                                             </h1>
                                                                                         </td>
                                                                                     </tr>
@@ -624,7 +624,7 @@
                                                                                         <td class="t46">
                                                                                             <p class="t44"
                                                                                                 style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:23px;font-weight:400;font-style:normal;font-size:12px;text-decoration:none;text-transform:none;letter-spacing:-0.6px;direction:ltr;color:#444444;text-align:left;mso-line-height-rule:exactly;mso-text-raise:3px;">
-                                                                                                Our records show that payment for your scheduled scan is pending. Please use the link below to complete the payment and secure your booking.</p>
+                                                                                                You have received a payment request to confirm your radiology scan appointment. Please find the scan centre details below:</p>
                                                                                         </td>
                                                                                     </tr>
                                                                                 </table>
@@ -655,7 +655,7 @@
                                                                                         <td class="t52">
                                                                                             <p class="t50"
                                                                                                 style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:23px;font-weight:600;font-style:normal;font-size:12px;text-decoration:none;text-transform:none;letter-spacing:-0.6px;direction:ltr;color:#444444;text-align:left;mso-line-height-rule:exactly;mso-text-raise:3px;">
-                                                                                                Booking Details</p>
+                                                                                                Centre Details</p>
                                                                                         </td>
                                                                                     </tr>
                                                                                 </table>
@@ -680,9 +680,9 @@
                                                                                             <p class="t57"
                                                                                                 style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:23px;font-weight:400;font-style:normal;font-size:12px;text-decoration:none;text-transform:none;letter-spacing:-0.6px;direction:ltr;color:#444444;text-align:left;mso-line-height-rule:exactly;mso-text-raise:3px;">
                                                                                                 <span class="t56"
-                                                                                                    style="margin:0;Margin:0;font-weight:500;mso-line-height-rule:exactly;">Scan:
+                                                                                                    style="margin:0;Margin:0;font-weight:500;mso-line-height-rule:exactly;">Name:
                                                                                                 </span>
-                                                                                                [Scan Name]
+                                                                                                [Name]
                                                                                                     &nbsp;
                                                                                             </p>
                                                                                         </td>
@@ -709,10 +709,97 @@
                                                                                             <p class="t63"
                                                                                                 style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:23px;font-weight:400;font-style:normal;font-size:12px;text-decoration:none;text-transform:none;letter-spacing:-0.6px;direction:ltr;color:#444444;text-align:left;mso-line-height-rule:exactly;mso-text-raise:3px;">
                                                                                                 <span class="t62"
-                                                                                                    style="margin:0;Margin:0;font-weight:500;mso-line-height-rule:exactly;">Date & Time: </span>
-                                                                                                    [Date], [Time]
+                                                                                                    style="margin:0;Margin:0;font-weight:500;mso-line-height-rule:exactly;">Email ID: </span>
+                                                                                                    [Email]
                                                                                                     &nbsp;
                                                                                             </p>
+                                                                                        </td>
+                                                                                    </tr>
+                                                                                </table>
+                                                                            </td>
+                                                                        </tr>
+                                                                    </table>
+                                                                </td>
+                                                            </tr>
+                                                            <tr>
+                                                                <td align="center">
+                                                                    <table class="t67" role="presentation"
+                                                                        cellpadding="0" cellspacing="0"
+                                                                        style="Margin-left:auto;Margin-right:auto;">
+                                                                        <tr>
+                                                                            <td width="467" class="t66"
+                                                                                style="width:467px;">
+                                                                                <table class="t65" role="presentation"
+                                                                                    cellpadding="0" cellspacing="0"
+                                                                                    width="100%" style="width:100%;">
+                                                                                    <tr>
+                                                                                        <td class="t64">
+                                                                                            <p class="t63"
+                                                                                                style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:23px;font-weight:400;font-style:normal;font-size:12px;text-decoration:none;text-transform:none;letter-spacing:-0.6px;direction:ltr;color:#444444;text-align:left;mso-line-height-rule:exactly;mso-text-raise:3px;">
+                                                                                                <span class="t62"
+                                                                                                    style="margin:0;Margin:0;font-weight:500;mso-line-height-rule:exactly;">Address: </span>
+                                                                                                    [Address]
+                                                                                                    &nbsp;
+                                                                                            </p>
+                                                                                        </td>
+                                                                                    </tr>
+                                                                                </table>
+                                                                            </td>
+                                                                        </tr>
+                                                                    </table>
+                                                                </td>
+                                                            </tr>
+                                                            <tr>
+                                                                <td align="center">
+                                                                    <table class="t67" role="presentation"
+                                                                        cellpadding="0" cellspacing="0"
+                                                                        style="Margin-left:auto;Margin-right:auto;">
+                                                                        <tr>
+                                                                            <td width="467" class="t66"
+                                                                                style="width:467px;">
+                                                                                <table class="t65" role="presentation"
+                                                                                    cellpadding="0" cellspacing="0"
+                                                                                    width="100%" style="width:100%;">
+                                                                                    <tr>
+                                                                                        <td class="t64">
+                                                                                            <p class="t63"
+                                                                                                style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:23px;font-weight:400;font-style:normal;font-size:12px;text-decoration:none;text-transform:none;letter-spacing:-0.6px;direction:ltr;color:#444444;text-align:left;mso-line-height-rule:exactly;mso-text-raise:3px;">
+                                                                                                <span class="t62"
+                                                                                                    style="margin:0;Margin:0;font-weight:500;mso-line-height-rule:exactly;">Contact: </span>
+                                                                                                    [Contact]
+                                                                                                    &nbsp;
+                                                                                            </p>
+                                                                                        </td>
+                                                                                    </tr>
+                                                                                </table>
+                                                                            </td>
+                                                                        </tr>
+                                                                    </table>
+                                                                </td>
+                                                            </tr>
+                                                            <tr>
+                                                                <td>
+                                                                    <div class="t81"
+                                                                        style="mso-line-height-rule:exactly;mso-line-height-alt:17px;line-height:17px;font-size:1px;display:block;">
+                                                                        &nbsp;&nbsp;</div>
+                                                                </td>
+                                                            </tr>
+                                                            <tr>
+                                                                <td align="center">
+                                                                    <table class="t102" role="presentation"
+                                                                        cellpadding="0" cellspacing="0"
+                                                                        style="Margin-left:auto;Margin-right:auto;">
+                                                                        <tr>
+                                                                            <td width="467" class="t101"
+                                                                                style="width:467px;">
+                                                                                <table class="t100" role="presentation"
+                                                                                    cellpadding="0" cellspacing="0"
+                                                                                    width="100%" style="width:100%;">
+                                                                                    <tr>
+                                                                                        <td class="t99">
+                                                                                            <p class="t97"
+                                                                                                style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:23px;font-weight:400;font-style:normal;font-size:12px;text-decoration:none;text-transform:none;letter-spacing:-0.6px;direction:ltr;color:#444444;text-align:left;mso-line-height-rule:exactly;mso-text-raise:3px;">
+                                                                                                To proceed, please click the button below to complete the payment:</p>
                                                                                         </td>
                                                                                     </tr>
                                                                                 </table>
@@ -777,7 +864,7 @@
                                                                                         <td class="t99">
                                                                                             <p class="t97"
                                                                                                 style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:23px;font-weight:400;font-style:normal;font-size:12px;text-decoration:none;text-transform:none;letter-spacing:-0.6px;direction:ltr;color:#444444;text-align:left;mso-line-height-rule:exactly;mso-text-raise:3px;">
-                                                                                                The booking will be confirmed only after payment is received.</p>
+                                                                                                If you have any questions or need assistance, feel free to reach out to us or contact the scan centre directly.</p>
                                                                                         </td>
                                                                                     </tr>
                                                                                 </table>
