--- a/src/backend-templates/email/send_scan_report_doctor.ejs
+++ b/src/backend-templates/email/send_scan_report_doctor.ejs
@@ -559,7 +559,7 @@
                                                                                         <td class="t34">
                                                                                             <h1 class="t32"
                                                                                                 style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:28px;font-weight:600;font-style:normal;font-size:18px;text-decoration:none;text-transform:none;letter-spacing:-1.2px;direction:ltr;color:#222222;text-align:center;mso-line-height-rule:exactly;mso-text-raise:3px;">
-                                                                                                Scan Slot Reserved – [Scan Name]
+                                                                                                Scan Report for [Patient Name] – [Scan Name]
                                                                                             </h1>
                                                                                         </td>
                                                                                     </tr>
@@ -624,7 +624,7 @@
                                                                                         <td class="t46">
                                                                                             <p class="t44"
                                                                                                 style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:23px;font-weight:400;font-style:normal;font-size:12px;text-decoration:none;text-transform:none;letter-spacing:-0.6px;direction:ltr;color:#444444;text-align:left;mso-line-height-rule:exactly;mso-text-raise:3px;">
-                                                                                                This is to confirm that a slot has been reserved for your upcoming scan. Please find the details below:</p>
+                                                                                                Please find the attached scan report for your reference.</p>
                                                                                         </td>
                                                                                     </tr>
                                                                                 </table>
@@ -655,7 +655,7 @@
                                                                                         <td class="t52">
                                                                                             <p class="t50"
                                                                                                 style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:23px;font-weight:600;font-style:normal;font-size:12px;text-decoration:none;text-transform:none;letter-spacing:-0.6px;direction:ltr;color:#444444;text-align:left;mso-line-height-rule:exactly;mso-text-raise:3px;">
-                                                                                                Booking Details</p>
+                                                                                                Patient Details:</p>
                                                                                         </td>
                                                                                     </tr>
                                                                                 </table>
@@ -680,9 +680,9 @@
                                                                                             <p class="t57"
                                                                                                 style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:23px;font-weight:400;font-style:normal;font-size:12px;text-decoration:none;text-transform:none;letter-spacing:-0.6px;direction:ltr;color:#444444;text-align:left;mso-line-height-rule:exactly;mso-text-raise:3px;">
                                                                                                 <span class="t56"
-                                                                                                    style="margin:0;Margin:0;font-weight:500;mso-line-height-rule:exactly;">Scan:
+                                                                                                    style="margin:0;Margin:0;font-weight:500;mso-line-height-rule:exactly;">Name:
                                                                                                 </span>
-                                                                                                [Scan Name]
+                                                                                                [Patient Name]
                                                                                                     &nbsp;
                                                                                             </p>
                                                                                         </td>
@@ -709,8 +709,8 @@
                                                                                             <p class="t63"
                                                                                                 style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:23px;font-weight:400;font-style:normal;font-size:12px;text-decoration:none;text-transform:none;letter-spacing:-0.6px;direction:ltr;color:#444444;text-align:left;mso-line-height-rule:exactly;mso-text-raise:3px;">
                                                                                                 <span class="t62"
-                                                                                                    style="margin:0;Margin:0;font-weight:500;mso-line-height-rule:exactly;">Date & Time: </span>
-                                                                                                    [Date], [Time]
+                                                                                                    style="margin:0;Margin:0;font-weight:500;mso-line-height-rule:exactly;">Age & Sex: </span>
+                                                                                                    [Patient Age], [Patient Sex]
                                                                                                     &nbsp;
                                                                                             </p>
                                                                                         </td>
@@ -737,9 +737,37 @@
                                                                                             <p class="t69"
                                                                                                 style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:23px;font-weight:400;font-style:normal;font-size:12px;text-decoration:none;text-transform:none;letter-spacing:-0.6px;direction:ltr;color:#444444;text-align:left;mso-line-height-rule:exactly;mso-text-raise:3px;">
                                                                                                 <span class="t68"
-                                                                                                    style="margin:0;Margin:0;font-weight:500;mso-line-height-rule:exactly;">Location:
+                                                                                                    style="margin:0;Margin:0;font-weight:500;mso-line-height-rule:exactly;">Scan Type:
                                                                                                 </span>
-                                                                                                [Center Name], [Address]
+                                                                                                [Scan Name]
+                                                                                            </p>
+                                                                                        </td>
+                                                                                    </tr>
+                                                                                </table>
+                                                                            </td>
+                                                                        </tr>
+                                                                    </table>
+                                                                </td>
+                                                            </tr>
+                                                            <tr>
+                                                                <td align="center">
+                                                                    <table class="t73" role="presentation"
+                                                                        cellpadding="0" cellspacing="0"
+                                                                        style="Margin-left:auto;Margin-right:auto;">
+                                                                        <tr>
+                                                                            <td width="467" class="t72"
+                                                                                style="width:467px;">
+                                                                                <table class="t71" role="presentation"
+                                                                                    cellpadding="0" cellspacing="0"
+                                                                                    width="100%" style="width:100%;">
+                                                                                    <tr>
+                                                                                        <td class="t70">
+                                                                                            <p class="t69"
+                                                                                                style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:23px;font-weight:400;font-style:normal;font-size:12px;text-decoration:none;text-transform:none;letter-spacing:-0.6px;direction:ltr;color:#444444;text-align:left;mso-line-height-rule:exactly;mso-text-raise:3px;">
+                                                                                                <span class="t68"
+                                                                                                    style="margin:0;Margin:0;font-weight:500;mso-line-height-rule:exactly;">Date of Scan:
+                                                                                                </span>
+                                                                                                [Scan Date]
                                                                                             </p>
                                                                                         </td>
                                                                                     </tr>
@@ -771,7 +799,7 @@
                                                                                         <td class="t87">
                                                                                             <p class="t86"
                                                                                                 style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:23px;font-weight:400;font-style:normal;font-size:12px;text-decoration:none;text-transform:none;letter-spacing:-0.6px;direction:ltr;color:#444444;text-align:left;mso-line-height-rule:exactly;mso-text-raise:3px;">
-                                                                                                You will receive further communication regarding the next steps for your appointment. Kindly ensure that you arrive at the centre at the scheduled time.
+                                                                                                If you have any questions or need additional information, please do not hesitate to contact us at [Contact Number].
                                                                                             </p>
                                                                                         </td>
                                                                                     </tr>
@@ -783,8 +811,8 @@
                                                             </tr>
                                                             <tr>
                                                                 <td>
-                                                                    <div class="t104"
-                                                                        style="mso-line-height-rule:exactly;mso-line-height-alt:17px;line-height:17px;font-size:1px;display:block;">
+                                                                    <div class="t92"
+                                                                        style="mso-line-height-rule:exactly;mso-line-height-alt:15px;line-height:15px;font-size:1px;display:block;">
                                                                         &nbsp;&nbsp;</div>
                                                                 </td>
                                                             </tr>
